--- a/restaurant/src/main/resources/templates/fragments.html
+++ b/restaurant/src/main/resources/templates/fragments.html
@@ -49,6 +49,50 @@
         </div>
     </div>
 </nav>
-
+<footer th:fragment="write-edit">
+    <form name="myplaceForm" action="/myplace/save" method="post">
+        <fieldset>
+            <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+<!--                <h3 style="margin-top: 50px; text-align: center;">내 장소 저장하기</h3>-->
+                <label class="col-form-label mt-4">장소 이름</label>
+                <input type="text" class="form-control" name="placeName">
+            </div>
+            <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+                <label class="col-form-label mt-4">주소</label>
+                <input type="text" class="form-control" name="address">
+            </div>
+            <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+                <label for="exampleSelect1" class="form-label mt-4" >카테고리</label>
+                <select class="form-select" id="exampleSelect1" name="category">
+                    <option>맛집</option>
+                    <option>카페</option>
+                    <option>숙소</option>
+                    <option>관광지</option>
+                    <option>액티비티</option>
+                    <option>기타</option>
+                </select>
+            </div>
+            <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+                <label for="exampleTextarea" class="form-label mt-4" >내용</label>
+                <textarea class="form-control" id="exampleTextarea" rows="3" name="contents"></textarea>
+            </div>
+            <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+                <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
+                <input class="form-control" type="file" id="formFile" name="photo">
+            </div>
+            <fieldset class="form-group">
+                <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" th:checked="${share}">
+                    <label class="form-check-label" for="flexSwitchCheckChecked">다른 사용자에게 내 장소를 공유합니다.</label>
+                </div>
+            </fieldset>
+            <input type="hidden" name="userId" th:value="${id}" />
+            <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-bottom: 50px; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
+                <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+                <button class="btn btn-lg btn-primary" type="submit" onclick="myplaceSubmit()">저장하기</button>
+            </div>
+        </fieldset>
+    </form>
+</footer>
 </body>
 </html>
