--- a/restaurant/src/main/resources/templates/fragments.html
+++ b/restaurant/src/main/resources/templates/fragments.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
-    <title>My Hotple Shared Place page</title>
 </head>
 <body>
 <nav th:fragment="main-nav" class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
@@ -49,11 +48,11 @@
         </div>
     </div>
 </nav>
+
 <footer th:fragment="write-edit">
     <form name="myplaceForm" action="/myplace/save" method="post">
         <fieldset>
             <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
-<!--                <h3 style="margin-top: 50px; text-align: center;">내 장소 저장하기</h3>-->
                 <label class="col-form-label mt-4">장소 이름</label>
                 <input type="text" class="form-control" name="placeName">
             </div>
@@ -93,6 +92,17 @@
             </div>
         </fieldset>
     </form>
+</footer>
+
+<footer th:fragment="comment">
+    <div class="card" bis_skin_checked="1"  style="width: 60%; margin: 50px auto;">
+        <div class="card-body" bis_skin_checked="1">
+            <h6 class="card-subtitle mb-2 text-muted">댓글 작성자</h6>
+            <p class="card-text">여기에는 댓글 내용을 적는 게 좋을 것 같다.</p>
+            <a href="#" class="card-link">수정</a>
+            <a href="#" class="card-link">삭제</a>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
