--- a/restaurant/src/main/resources/templates/myplace/detail.html
+++ b/restaurant/src/main/resources/templates/myplace/detail.html
@@ -2,13 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="UTF-8">
-  <link th:href="@{/css/bootstrap.min.css}"
-        href="../css/bootstrap.min.css" rel="stylesheet">
-  <title>My Hotple  Myplace page</title>
+  <title th:text="${myplace.placeName}"></title>
+  <div th:replace="fragments.html :: main-head"></div>
 </head>
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
-<!--<div th:replace="fragments.html :: detail-div"></div>-->
 <div class="card mb-3" bis_skin_checked="1" style="width: 60%; margin: 50px auto;">
   <h3 class="card-header" th:text="${myplace.placeName}"></h3>
   <div class="card-body" bis_skin_checked="1">
@@ -30,7 +28,7 @@
     <a href="#" class="card-link">좋아요 누르기</a>
     <div style="text-align: right">
       <a href="/myplace/list" class="card-link">목록</a>
-      <a href="/myplace/update" class="card-link">수정</a>
+      <a href="/myplace/edit" class="card-link">수정</a>
       <a href="/myplace/delete" class="card-link">삭제</a>
     </div>
   </div>
@@ -38,15 +36,6 @@
        th:text="*{#temporals.format(myplace.createdTime, 'yyyy-MM-dd HH:mm:ss')}">
   </div>
 </div>
-<div class="card" bis_skin_checked="1"  style="width: 60%; margin: 50px auto;">
-  <div class="card-body" bis_skin_checked="1">
-    <h6 class="card-subtitle mb-2 text-muted">댓글 작성자</h6>
-    <p class="card-text">여기에는 댓글 내용을 적는 게 좋을 것 같다.</p>
-    <a href="#" class="card-link">수정</a>
-    <a href="#" class="card-link">삭제</a>
-  </div>
-</div>
-
-</div>
+<div th:replace="fragments.html :: comment"></div>
 </body>
 </html>
