--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="UTF-8">
+  <title th:text="${myplace.placeName}"></title>
   <div th:replace="fragments.html :: main-head"></div>
-  <title>My Hotple Shared Place page</title>
 </head>
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
@@ -36,15 +36,7 @@
        th:text="*{#temporals.format(myplace.createdTime, 'yyyy-MM-dd HH:mm:ss')}">
   </div>
 </div>
-<div class="card" bis_skin_checked="1"  style="width: 60%; margin: 50px auto;">
-  <div class="card-body" bis_skin_checked="1">
-    <h6 class="card-subtitle mb-2 text-muted">댓글 작성자</h6>
-    <p class="card-text">여기에는 댓글 내용을 적는 게 좋을 것 같다.</p>
-    <a href="#" class="card-link">수정</a>
-    <a href="#" class="card-link">삭제</a>
-  </div>
-</div>
+<div th:replace="fragments.html :: comment"></div>
 
-</div>
 </body>
 </html>
