--- a/restaurant/src/main/resources/templates/myplace/detail.html
+++ b/restaurant/src/main/resources/templates/myplace/detail.html
@@ -13,9 +13,9 @@
     <h5 class="card-title" th:text="${myplace.address}"></h5>
     <h6 class="card-subtitle text-muted" style="text-align: right" th:text="' 조회수: ' + ${myplace.views}"></h6>
   </div>
-  <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-    <rect width="100%" height="100%" fill="#868e96"></rect>
-    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+  <svg th:if="${myplace.fileAttached == 1}"
+       xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="0" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+    <text><img th:src="@{|/upload/${myplace.storedFileName}|}" alt=""></text>
   </svg>
   <div class="card-body" bis_skin_checked="1">
     <p class="card-text" th:text="${myplace.category}"></p>
