--- a/restaurant/src/main/resources/templates/fragments.html
+++ b/restaurant/src/main/resources/templates/fragments.html
@@ -77,7 +77,7 @@
             </div>
             <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
                 <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
-                <input class="form-control" type="file" id="formFile" name="file">
+                <input class="form-control" type="file" id="formFile" name="file" multiple>
             </div>
             <fieldset class="form-group">
                 <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
