--- a/restaurant/src/main/resources/templates/myplace/detail.html
+++ b/restaurant/src/main/resources/templates/myplace/detail.html
@@ -15,7 +15,9 @@
   </div>
   <svg th:if="${myplace.fileAttached == 1}"
        xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="0" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-    <text><img th:src="@{|/upload/${myplace.storedFileName}|}" alt=""></text>
+    <text th:each="fileName: ${myplace.storedFileName}">
+      <img th:src="@{|/upload/${fileName}|}" alt="">
+    </text>
   </svg>
   <div class="card-body" bis_skin_checked="1">
     <p class="card-text" th:text="${myplace.category}"></p>
